syntax = "proto3";

package dev.httpmarco.polocloud.v1.proto;

option java_package = "dev.httpmarco.polocloud.v1.information";
option java_multiple_files = true;

service CloudInformationController {
  rpc find(CloudInformationFindRequest) returns (CloudInformationFindResponse);
  rpc findAll(CloudInformationFindAllRequest) returns (CloudInformationFindAllResponse);
  rpc findMinutes(CloudInformationFindMinutesRequest) returns (CloudInformationFindMinutesResponse);
  rpc findHours(CloudInformationFindHoursRequest) returns (CloudInformationFindHoursResponse);
  rpc findDays(CloudInformationFindDaysRequest) returns (CloudInformationFindDaysResponse);
  rpc findAverage(CloudInformationFindAverageRequest) returns (CloudInformationFindAverageResponse);
  rpc cleanUp(CloudInformationCleanUpRequest) returns (CloudInformationCleanUpResponse);
}

message CloudInformationFindRequest {
  optional int64 from = 1;
  optional int64 to = 2;
}

message CloudInformationFindResponse {
  repeated CloudInformationSnapshot information = 1;
}

message CloudInformationFindAllRequest {}

message CloudInformationFindAllResponse {
  repeated CloudInformationSnapshot information = 1;
}

message CloudInformationFindMinutesRequest {
  optional int64 from = 1;
  optional int64 to = 2;
}

message CloudInformationFindMinutesResponse {
  repeated AggregateCloudInformationSnapshot information = 1;
}

message CloudInformationFindHoursRequest {
  optional int64 from = 1;
  optional int64 to = 2;
}

message CloudInformationFindHoursResponse {
  repeated AggregateCloudInformationSnapshot information = 1;
}

message CloudInformationFindDaysRequest {
  optional int64 from = 1;
  optional int64 to = 2;
}

message CloudInformationFindDaysResponse {
  repeated AggregateCloudInformationSnapshot information = 1;
}

message CloudInformationFindAverageRequest {
  optional int64 from = 1;
  optional int64 to = 2;
}

message CloudInformationFindAverageResponse {
  AggregateCloudInformationSnapshot information = 1;
}

message CloudInformationCleanUpRequest {
  int64 max_age_millis = 1;
}

message CloudInformationCleanUpResponse {}


message CloudInformationSnapshot {
  int64 started = 1;
  string runtime = 2;
  string java_version = 3;
  double cpu_usage = 4;
  double used_memory = 5;
  double max_memory = 6;
  int32 subscribed_events = 7;
  int64 timestamp = 8;
}

message AggregateCloudInformationSnapshot {
  int64 timestamp = 1;
  double avg_cpu = 2;
  double avg_ram = 3;
}