syntax = "proto3";

package dev.httpmarco.polocloud.v1.proto;

option java_package = "dev.httpmarco.polocloud.v1.services";
option java_multiple_files = true;

import "polocloud/v1/proto/object_utils.proto";
import "polocloud/v1/proto/template_provider.proto";

service ServiceController {
  rpc find(ServiceFindRequest) returns (ServiceFindResponse);
  rpc boot(ServiceBootRequest) returns (ServiceBootResponse);
  rpc bootWithConfiguration(ServiceBootWithConfigurationRequest) returns (ServiceBootWithConfigurationResponse);
  rpc shutdown(ServiceShutdownRequest) returns (ServiceShutdownResponse);
}

message ServiceFindRequest {
  optional string name = 1;
  optional string group_name = 2;
  optional GroupType type = 3;
}

message ServiceFindResponse {
  repeated ServiceSnapshot services = 1;
}

message ServiceBootRequest {
  string group_name = 1;
}

message ServiceBootResponse {
  ServiceSnapshot service = 1;
}

message ServiceBootWithConfigurationRequest {
  string group_name = 1;
  optional uint32 minimum_memory = 2;
  optional uint32 maximum_memory = 3;
  repeated TemplateSnapshot templates = 4;
  repeated TemplateSnapshot excluded_templates = 5;
  map<string, string> properties = 6;
}

message ServiceBootWithConfigurationResponse {
  ServiceSnapshot service = 1;
}

message ServiceShutdownRequest {
  string name = 1;
}

message ServiceShutdownResponse {
  ServiceSnapshot service = 1;
}

message ServiceSnapshot {
  GroupType server_type = 1;
  string group_name = 2;
  uint32 id = 3;
  uint32 minimum_memory = 4;
  uint32 maximum_memory = 5;
  string hostname = 6;
  uint32 port = 7;
  repeated TemplateSnapshot templates = 8;
  uint32 max_player_count = 9;
  uint32 player_count = 10;
  double memory_usage = 11;
  double cpu_usage = 12;
  ServiceState state = 13;
  string motd = 14;
  ServiceInformationSnapshot information = 15;
  map<string, string> properties = 16;
}

message ServiceInformationSnapshot {
  int64 created_at = 1;
}

enum ServiceState {
  PREPARING = 0;
  STARTING = 1;
  ONLINE = 2;
  STOPPING = 3;
  STOPPED = 4;
}